data/derived/fa15/progs/unify/prog1455.ml.out
Characters 137-138:
  ( (cin + d1 + d2) mod 10 ,(cin + d1 + d2) :: a) in
                                               ^
Error: This expression has type int * 'a
       but an expression was expected of type int list
